# sugerencias-para-practicar-programacion

./: .gitignore  LICENSE  README.md
ArchivoDeTextoPlano/: ENUNCIADO.md  ENUNCIADO.txt  ENUNCIADO_ArchivoDeTextoPlano_.md  archivo para pruebas.txt
Areas_y_Perimetros/: ENUNCIADO_Areas_y_Perimetros_.md
Ascensores/: ENUNCIADO_Ascensores_.md
Ascensores/imagenes/: ascensores-caso_de_uso.dia  ascensores-diagrama_de_clases.dia
CodigoMorse/: ENUNCIADO_CodigoMorse_.md
ComparacionesEntreParadigmas/CuentaBancaria/: ENUNCIADO.md
ContadorAlfabetico/: ENUNCIADO_ContadorAlfabetico_.md
ContandoPalabras/: ENUNCIADO_ContandoPalabras.md  lorem_ipsum.txt
CuentaBancaria/: ENUNCIADO.md
CuentasBancarias/: ENUNCIADO_CuentasBancarias_.md  pistas para desarrollarlo en pequeños pasos.md
Excursiones/: ENUNCIADO_Excursiones_.md
Hotel/: ENUNCIADO_Hotel_.md
InterfaceGrafico/: ENUNCIADO_InterfaceGrafico_.md
InterfaceGrafico/muestras_de_posibles_soluciones/rust-egui/: Cargo.toml
InterfaceGrafico/muestras_de_posibles_soluciones/rust-egui/src/: bocatas.rs  hello_benzirpi.rs  main.rs
IntroduccionALaOrientacionAObjeto/01 - Donativos/: ENUNCIADO.md
IntroduccionALaOrientacionAObjeto/Calculo/: ENUNCIADO.md
IntroduccionALaOrientacionAObjeto/Donativos/: subscripciones y donativos.csv
IntroduccionALaOrientacionAObjeto/Excursiones/: ENUNCIADO.md
MVC/: ENUNCIADO_mvc_.md
Multiinterface/: ENUNCIADO_Multiinterface_.md
NumBinHex/: ENUNCIADO_NumBinHex_.md
OrientacionAObjeto/: notas guia.md
ProcesandoListas/: ENUNCIADO_ProcesandoListas_.md
(+318 files in other folders)
